--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ div {
     margin: 20px;
     font-size: 4rem;
     outline-style: dashed;
+    text-align: center;
+    text-transform: capitalize;
 }
 
 img {
